--- a/public/service-item.html
+++ b/public/service-item.html
@@ -16,14 +16,14 @@
     <div class="container">
       <div class="navbar-left">
         <a href="javascript:;">
-          <img src="./images/logo.png">
+          <img src="./images1/main/logo.png">
         </a>
       </div>
       <div class="navbar-right">
         <ul class="nav">
           <li class="position">
             <a href="/position">
-              <img src="./images/citypoint.png">
+              <img src="./images1/main/citypoint.png">
               <span class="showCity">北京</span>
               <span class="city">切换城市</span>
             </a>
@@ -56,26 +56,7 @@
 </div>
 <section id="service-item">
   <div class="htit">
-    <!--<div class="htit-center">-->
-      <!--<div class="htit-right">-->
-        <!--<b>云家政</b>-->
-        <!--<i>营业时间：<em>09:00-18:00</em></i>-->
-        <!--<i>最近可预约时间：<em>03月16日 09:00</em></i>-->
-      <!--</div>-->
-      <!--<div class="htit-left">-->
-        <!--<span>-->
-          <!--<i>86%</i>好评率-->
-        <!--</span>-->
-        <!--<span>-->
-          <!--<i>91%</i>接单率-->
-          <!--<em>|</em>-->
-        <!--</span>-->
-        <!--<span>-->
-          <!--<i>45186</i>成功接单-->
-          <!--<em>|</em>-->
-        <!--</span>-->
-      <!--</div>-->
-    <!--</div>-->
+    <div id="uu"></div>
   </div>
   <div class="navtit">
     <ul class="items">
@@ -87,81 +68,69 @@
     </ul>
   </div>
   <div class="nav">
+
     <div class="nav-center">
       <div class="service-link fuwu">
-        <h3 ><i>服务项目</i></h3>
-        <div class="link-item">
-          <img src="./images1/service/5cf8680f-0264-4686-ba05-145700db6063_thumb.jpg">
-          <div class="link-desc">
-            <span>家庭保洁</span>
-            <span>家庭保洁服务，2小时起订，服务时间未使用完不做退款处理。
-             阿...
-            </span>
-            <span>
-              <i class="price">35<em>元/小时</em></i>
-              <i class="oldpic">原价<em>45</em></i>
-              <i class="sold">已售出59423</i>
-            </span>
-          </div>
-        </div>
+
       </div>
-      <div class="service-link shop">
-        <h3><i>商家简介</i></h3>
-        <div class="link-item">
-          <span class="shopName">
-            上海家谐网络科技有限公司
-            <img src="./images1/service/renzheng.jpg"/>
-          </span>
-          <span class="desc">
-            云家政是家政服务在线预订平台。我们的目标是让每个家庭都能获得诚信、便捷、有保障的家政服务。云家政拥有国内最大的实名认证家庭服务员数据库，目前平台上有超过100000名专业服务人员；数百个家政服务商，遍布全国主要城市各个社区。 云家政倡导简单、轻松的生活方式。通过把分散的家政服务能力汇集和分配，让中国家庭获得诚信、便捷、有保障的家政服务，解决日常生活中的麻烦事，把更多时间留给自己和家人，提高生活品质。
-          </span>
-        </div>
-      </div>
+      <!--<div class="service-link shop">-->
+        <!--<h3><i>商家简介</i></h3>-->
+        <!--<div class="link-item">-->
+          <!--<span class="shopName">-->
+            <!--上海家谐网络科技有限公司-->
+            <!--<img src="./images1/service/renzheng.jpg"/>-->
+          <!--</span>-->
+          <!--<span class="desc">-->
+            <!--云家政是家政服务在线预订平台。我们的目标是让每个家庭都能获得诚信、便捷、有保障的家政服务。云家政拥有国内最大的实名认证家庭服务员数据库，目前平台上有超过100000名专业服务人员；数百个家政服务商，遍布全国主要城市各个社区。 云家政倡导简单、轻松的生活方式。通过把分散的家政服务能力汇集和分配，让中国家庭获得诚信、便捷、有保障的家政服务，解决日常生活中的麻烦事，把更多时间留给自己和家人，提高生活品质。-->
+          <!--</span>-->
+        <!--</div>-->
+      <!--</div>-->
       <div class="service-link users">
         <h3><i>用户评论</i><em>（10300条评论）</em></h3>
         <div class="conments">
-          <!--评论列表-->
           <div class="conment">
-            <img src="./images1/service/0.jpg">
-            <ul>
-              <li class="username">U1244545</li>
-              <li class="star">
-                <span >
-                    <img src="./images1/service/red_star.png">
-                    <img src="./images1/service/red_star.png">
-                    <img src="./images1/service/red_star.png">
-                    <img src="./images1/service/red_star.png">
-                    <img src="./images1/service/red_star.png">
-                </span>
-                <span><em>2018-03-15</em></span>
-              </li>
-              <li class="say">服务专业，态度热情，准时到达</li>
-              <li class="position">
-                <img src="./images1/service/position.jpg">
-                北京  西城区
-              </li>
-            </ul>
+
           </div>
+          <!--评论列表-->
+          <!--<div class="conment">-->
+            <!--<img src="./images1/service/0.jpg">-->
+            <!--<ul>-->
+              <!--<li class="username">U1244545</li>-->
+              <!--<li class="star">-->
+                <!--<span >-->
+                    <!--<img src="./images1/service/red_star.png">-->
+                    <!--<img src="./images1/service/red_star.png">-->
+                    <!--<img src="./images1/service/red_star.png">-->
+                    <!--<img src="./images1/service/red_star.png">-->
+                    <!--<img src="./images1/service/red_star.png">-->
+                <!--</span>-->
+                <!--<span><em>2018-03-15</em></span>-->
+              <!--</li>-->
+              <!--<li class="say">服务专业，态度热情，准时到达</li>-->
+              <!--<li class="position">-->
+                <!--<img src="./images1/service/position.jpg">-->
+                <!--北京  西城区-->
+              <!--</li>-->
+            <!--</ul>-->
+          <!--</div>-->
           <div class="pages">
-            <a href="" class="up nopage"> &lt;上一页</a>
+            <a href="javascript:" class="up nopage"> &lt;上一页</a>
             <div class="showpage">
-              <a href="" class="num act">1</a>
-              <a href="" class="num">2</a>
-              <a href="" class="num">3</a>
-              <a href="" class="num">4</a>
-              <a href="" class="num">5</a>
-              <a href="" class="num">6</a>
-              <a href="" class="num">7</a>
-              <a href="" class="num">8</a>
-              <a href="" class="num">9</a>
-              <a href="" class="num">10</a>
+              <a href="javascript:" class="num act">1</a>
+              <a href="javascript:" class="num">2</a>
+              <a href="javascript:" class="num">3</a>
+              <a href="javascript:" class="num">4</a>
+              <a href="javascript:" class="num">5</a>
+              <a href="javascript:" class="num">6</a>
+              <a href="javascript:" class="num">7</a>
+              <a href="javascript:" class="num">8</a>
+              <a href="javascript:" class="num">9</a>
+              <a href="javascript:" class="num">10</a>
               ...
             </div>
-            <a href="" class="down">下一页&gt;</a>
+            <a href="javascript:" class="down">下一页&gt;</a>
           </div>
         </div>
-
-
       </div>
     </div>
     <div class="aside">
@@ -265,23 +234,123 @@
       <span>
           <i>{{$value.accept}}</i>接单率
           <em>|</em>
-        </span>
+      </span>
       <span>
           <i>{{$value.orderCount}}</i>成功接单
           <em>|</em>
-        </span>
+      </span>
     </div>
   </div>
   {{/each}}
 </script>
 
+<script id="temp2" type="text/html">
+  {{each data.data}}
+      <div class="link-item">
+        <img src="{{$value.imgUrl}}">
+        <div class="link-desc">
+          <span>{{$value.name}}</span>
+          <span>{{$value.desc}}</span>
+          <span>
+              <i class="price">{{$value.price}}<em>元/小时</em></i>
+              <i class="oldpic">原价<em>{{$value.oldPrice}}</em></i>
+              <i class="sold">已售出{{$value.soldCount}}</i>
+          </span>
+        </div>
+      </div>
+    <div class="service-link shop">
+      <h3><i>商家简介</i></h3>
+      <div class="link-item">
+          <span class="shopName">
+            {{$value.company}}
+            <img style="width: 48px; height: 18px; float: right; margin: 10px 595px 0 0; line-height: 40px"
+                 src="./images1/service/renzheng.jpg"/>
+          </span>
+        <span class="desc">{{$value.profile}}</span>
+      </div>
+    </div>
+  {{/each}}
+</script>
+
+<script id="temp3" type="text/html">
+  {{each data.data}}
+    <img src="{{$value.iconUrl}}">
+    <ul>
+      <li class="username">{{$value.nick}}</li>
+      <li class="star">
+                <span >
+                    <img src="./images1/service/red_star.png">
+                    <img src="./images1/service/red_star.png">
+                    <img src="./images1/service/red_star.png">
+                    <img src="./images1/service/red_star.png">
+                    <img src="./images1/service/red_star.png">
+                </span>
+        <span><em>2018-03-15</em></span>
+      </li>
+      <li class="say">{{$value.comment}}</li>
+      <li class="position">
+        <img src="./images1/service/position.jpg">
+        {{$value.city}}  {{$value.area}}
+      </li>
+    </ul>
+  {{/each}}
+</script>
+
 <script type="text/javascript">
   $(function () {
-    $.get('/getService', function (data) {
+    $.get('/getItem', function (data) {
       var html = template('temp1',{data:data})
-      $('#xo').append(html)
+      $('#uu').append(html)
       console.log(data)
     })
   })
+  $(function () {
+    $.get('/getItem', function (data) {
+      var html = template('temp2',{data:data})
+      $('.fuwu').append(html)
+      console.log(data)
+    })
+  })
+  // $(function () {
+  //   $.get('/getProject', function (data) {
+  //     var html = template('temp3',{data:data})
+  //     $('#qaqa').append(html)
+  //     console.log(data)
+  //   })
+  // })
 </script>
+
+
+<script type="text/javascript">
+  var page = 1
+  $(function () {
+
+    // $(document).scroll(function () {
+    //   if ($(this).scrollTop() >= 71) {
+    //     $('#header').addClass('ani')
+    //   } else {
+    //     $('#header').removeClass('ani')
+    //   }
+    // })
+    $.get('/getProject?page=' + page, (data) => {
+      $('.conment').html(template('temp3', {data}))
+      console.log({data});
+      const $aList = $('.showpage > a')
+      $aList.click(function () {
+        $aList.removeClass('act')
+        $(this).addClass('act')
+        let index = $(this).index()
+        page = ++index
+        console.log(page);
+        $.get('/getProject?page=' + page, (data) => {
+          $('.conment').html(template('temp3', {data}))
+          console.log({data});
+        })
+      })
+
+
+    })
+  })
+</script>
+
 </html>
